syntax = "proto3";
package app.v1;

import "buf/validate/validate.proto";
import "core/v1/http.proto";
import "kernel/matcher.proto";
import "kernel/resource.proto";

option go_package = "github.com/aileron-gateway/aileron-gateway/apis/app/v1";

// TimeoutMiddleware resource definition.
// apiVersion="app/v1", kind="TimeoutMiddleware".
message TimeoutMiddleware {
    // [REQUIRED]
    // APIVersion is the defined version of the midleware.
    // This value must be "app/v1".
    string APIVersion = 1 [json_name = "apiVersion"];

    // [REQUIRED]
    // Kind is the kind of this object.
    // This value must be "TimeoutMiddleware".
    string Kind = 2 [json_name = "kind"];

    // [OPTIONAL]
    // Metadata is the metadata of the http logger object.
    // If not set, both name and namespace in the metadata
    // are treated as "default".
    kernel.Metadata Metadata = 3 [json_name = "metadata"];

    // [OPTIONAL]
    // Spec is the specification of the middleware.
    // Default values are used when nothing is set.
    TimeoutMiddlewareSpec Spec = 4 [json_name = "spec"];
}

// TimeoutMiddlewareSpec is the specifications for the TimeoutMiddleware object.
message TimeoutMiddlewareSpec {
    // [OPTIONAL]
    // ErrorHandler is the reference to a ErrorHandler object.
    // Referred object must implement ErrorHandler interface.
    // Default error handler is used when not set.
    kernel.Reference ErrorHandler = 1 [json_name = "errorHandler"];

    // [OPTIONAL]
    // DefaultTimeout is the timeout duration in millisecond which is applied to requests
    // which are not matched to a matcher.
    // Timer starts just after requests are received and lasts until the clients receive the response completely.
    // No timeout is applied when this value is set to 0.
    // Default value is set to 0.
    int32 DefaultTimeout = 2 [json_name = "defaultTimeout", (buf.validate.field).int32 = {gte : 0}];

    // [OPTIONAL]
    // APITimeouts is the list of APITimeout objects.
    repeated APITimeoutSpec APITimeouts = 3 [json_name = "apiTimeouts"];
}

// APITimeoutSpec creates a timeout which is applied to requests
// with configured methods and a path.
message APITimeoutSpec {
    // [REQUIRED]
    // Matcher is a matcher which matches to defined patterns.
    // Default is not set.
    kernel.MatcherSpec Matcher = 1 [json_name = "matcher", (buf.validate.field).required = true];

    // [OPTIONAL]
    // Methods is the list of HTTP methods to be matched.
    // If not set, all methods are matched.
    // If set, only configured methods are matched.
    // Default is not set.
    repeated core.v1.HTTPMethod Methods = 2 [json_name = "methods", (buf.validate.field).repeated.unique = true];

    // [OPTIONAL]
    // Timeout is timeout duration in millisecond.
    // Timer starts just after requests are received and lasts until the clients receive the response completely.
    // No timeout is applied when this value is set to 0.
    // Default value is set to 0.
    int32 Timeout = 3 [json_name = "timeout", (buf.validate.field).int32 = {gte : 0}];
}
